--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.930.0",
     "@base-ui-components/react": "^1.0.0-beta.4",
+    "@clerk/localizations": "^3.28.0",
+    "@clerk/nextjs": "^6.35.1",
+    "@clerk/themes": "^2.4.36",
     "@hookform/resolvers": "^5.2.2",
     "@phosphor-icons/react": "^2.1.10",
     "@radix-ui/react-accordion": "^1.2.12",
